updated with confirms and alert

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ button[disabled] {
 
 #password {
   -webkit-appearance: none;
+  color: darkblue;
   -moz-appearance: none;
   appearance: none;
   border: none;
@@ -108,7 +109,7 @@ button[disabled] {
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 85px;
-  font-size: 1.2rem;
+  font-size: 2rem;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -126,7 +127,8 @@ button[disabled] {
   }
 
   #password {
-    font-size: 1rem;
+    font-size: 2rem;
+    color: darkblue;
   }
 }
 
